added fonts and banner

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     </head>
 
     <body>
-        <section>
-            <div class="text-center">
+        <section class="namaj-times">
+            <div class="banner">
+                
+            </div>
+            <div class="text-center intro">
                 <h2>নামাজ, সেহরি ও ইফতার এর সময়সূচি (<span id="place">ঢাকা</span>)</h2>
                 <p>ঢাকা সহ দেশের সব কয়টি জেলার সারা বছরের নামাজ, সেহরি ও ইফতারের সময় দেখুন এই পাতায়।</p>
             </div>
