Set meta for HSTS

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains" />
         <link rel="stylesheet" href="style.css" />
     </head>
 
     <body>
         <section class="namaj-times">
             <div class="banner">
-                
+
             </div>
             <div class="text-center intro">
                 <h2>নামাজ, সেহরি ও ইফতার এর সময়সূচি (<span id="place">ঢাকা</span>)</h2>
